# py50-streamlit

./: README.md
.run/runConfigurations/: Statistics.run.xml
app-testing/: Welcome.py  page_settings.yaml  py50-streamlit.py
app-testing/page/: Calculator.py  Changelog.py  Plot_Curves.py  Statistics.py
app-testing/page/functions/: calculator_func.py  curve_func.py  plotting.py  stat_func.py  statisitcs.py  statistics.py
dataset/: README.md
py50-streamlit/: Welcome.py  environment.yaml  page_settings.yaml  py50-streamlit.py  requirements.txt
py50-streamlit/page/: Calculator.py  Changelog.py  Plot_Curves.py  Statistics.py  Welcome.py
py50-streamlit/page-apps/: Changelog.py  Home.py  Welcome.py
py50-streamlit/page/functions/: calculator_func.py  curve_func.py  plotting.py  stat_func.py  stats.py
py50_support_module/: README.md  pyproject.toml
py50_support_module/py50_streamlit_support/: __init__.py  calculator.py  plot_settings.py  plotcurve.py  stats.py
